--- a/sass/_misc.scss
+++ b/sass/_misc.scss
@@ -237,10 +237,10 @@ form{
 		-moz-transform: 	scale(0.25) rotate(45deg);
 		-ms-transform: 		scale(0.25) rotate(45deg);
 		transform: 			scale(0.25) rotate(45deg);
-		-webkit-transition: all 0.1s ease-in-out;
-		-moz-transition: 	all 0.1s ease-in-out;
-		-ms-transition: 	all 0.1s ease-in-out;
-		transition: 		all 0.1s ease-in-out;
+		-webkit-transition: all 0.1s ease-in;
+		-moz-transition: 	all 0.1s ease-in;
+		-ms-transition: 	all 0.1s ease-in;
+		transition: 		all 0.1s ease-in;
 	}
 
 	input[type="checkbox"]:checked + label:after {
@@ -249,10 +249,10 @@ form{
 		-moz-transform: 	scale(1) rotate(45deg);
 		-ms-transform: 		scale(1) rotate(45deg);
 		transform: 			scale(1) rotate(45deg);
-		-webkit-transition: all 0.1s ease-in-out;
-		-moz-transition: 	all 0.1s ease-in-out;
-		-ms-transition: 	all 0.1s ease-in-out;
-		transition: 		all 0.1s ease-in-out;
+		-webkit-transition: all 0.1s ease-in;
+		-moz-transition: 	all 0.1s ease-in;
+		-ms-transition: 	all 0.1s ease-in;
+		transition: 		all 0.1s ease-in;
 	}
 
 	input[type="radio"] + label:before {
@@ -285,10 +285,10 @@ form{
 		-moz-transform: 	scale(0.25);
 		-ms-transform: 		scale(0.25);
 		transform: 			scale(0.25);
-		-webkit-transition: all 0.1s ease-in-out;
-		-moz-transition: 	all 0.1s ease-in-out;
-		-ms-transition: 	all 0.1s ease-in-out;
-		transition: 		all 0.1s ease-in-out;
+		-webkit-transition: all 0.1s ease-in;
+		-moz-transition: 	all 0.1s ease-in;
+		-ms-transition: 	all 0.1s ease-in;
+		transition: 		all 0.1s ease-in;
 	}
 
 	input[type="radio"]:checked + label:after {
@@ -297,10 +297,10 @@ form{
 		-moz-transform: 	scale(1);
 		-ms-transform: 		scale(1);
 		transform: 			scale(1);
-		-webkit-transition: all 0.1s ease-in-out;
-		-moz-transition: 	all 0.1s ease-in-out;
-		-ms-transition: 	all 0.1s ease-in-out;
-		transition: 		all 0.1s ease-in-out;
+		-webkit-transition: all 0.1s ease-in;
+		-moz-transition: 	all 0.1s ease-in;
+		-ms-transition: 	all 0.1s ease-in;
+		transition: 		all 0.1s ease-in;
 	}
 
 	.field{
@@ -356,21 +356,14 @@ form{
 				color: $white;
 				background-color: rgba(0,0,0,0.8);
 				position: absolute;
-				left: 105%;
+				left: 104%;
 				top: 50%;
-				opacity: 0;
-				visibility: hidden;
 				font-size: 0.875rem;
 				padding: 0.75rem 1.25rem;
 				line-height: 1.25rem;
 				border-radius: 5px;
 
-				@include translate(20px,-50%,0);
-
-				-webkit-transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out, transform 0.25s ease-in-out;
-				-moz-transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out, transform 0.25s ease-in-out;
-				-ms-transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out, transform 0.25s ease-in-out;
-				transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out, transform 0.25s ease-in-out;
+				@include translate(0,-50%,0);
 
 				&:before{
 					content: '';
@@ -401,29 +394,6 @@ form{
 						display: none;
 					}
 				}
-			}
-
-			&:hover .error{
-				left: 104%;
-				opacity: 1;
-				visibility: visible;
-				@include translate(0,-50%,0);
-
-				@include up-to-medium{
-					position: relative;
-					opacity: 1;
-					visibility: visible;
-					left: 0;
-					top: 0;
-					border-radius: 0 0 5px 5px;
-					max-width: 100%;
-
-					@include translate(0,0,0);
-
-					&:before{
-						display: none;
-					}
-				}	
 			}
 		}
 
